--- a/overlays/debug/kustomization.yml
+++ b/overlays/debug/kustomization.yml
@@ -1,6 +1,6 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+resources:
+  - ../../base
 
-commonLabels:
-  tailspin.debug-monitor: "true"
+patches:
+  - path: monitor.yml
