--- a/tailspin.yml
+++ b/tailspin.yml
@@ -1,4 +1,12 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: sidecar-example
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -17,5 +25,5 @@ spec:
     targetRevision: HEAD
     path: base
   destination:
-    namespace: sidecase-example
+    namespace: sidecar-example
     server: https://kubernetes.default.svc
