--- a/base/web-microservice.yml
+++ b/base/web-microservice.yml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: web
     app.kubernetes.io/component: web
-    app.kubernetes.io/instance: web
+    app.kubernetes.io/instance: tailspin
     app.kubernetes.io/name: web
     app.kubernetes.io/part-of: tailspin
     app.openshift.io/runtime: dotnet
@@ -41,7 +41,7 @@ metadata:
   labels:
     app: web
     app.kubernetes.io/component: web
-    app.kubernetes.io/instance: web
+    app.kubernetes.io/instance: tailspin
     app.kubernetes.io/name: web
     app.kubernetes.io/part-of: tailspin
 spec:
@@ -61,7 +61,7 @@ metadata:
   labels:
     app: web
     app.kubernetes.io/component: web
-    app.kubernetes.io/instance: web
+    app.kubernetes.io/instance: tailspin
     app.kubernetes.io/name: web
     app.kubernetes.io/part-of: tailspin
     app.openshift.io/runtime: dotnet
