--- a/tailspin.yml
+++ b/tailspin.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sidecar-example
+  name: sidecar-demo
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 
@@ -15,8 +15,6 @@ metadata:
 spec:
   project: default
   syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
     automated:
       prune: false
       selfHeal: false
@@ -25,5 +23,5 @@ spec:
     targetRevision: HEAD
     path: base
   destination:
-    namespace: sidecar-example
+    namespace: sidecar-demo
     server: https://kubernetes.default.svc
